- Fix apc_add() cache expunge bug (Rasmus)

3.0.16: 2007-12-26
- Fix for longstanding cache-full crash (Christian Seiler)
  http://news.php.net/php.pecl.dev/4951 for the details
- Added optional shm unmap on a fatal signal feature (Lucas Nealan)
- Added PTHREAD_MUTEX_ADAPTIVE_NP option pthread locks (Paul Saab)
- Minor cleanups (Lucas Nealan)
- Added configure option to enable apc_cache_info('filehits') (Shire)

3.0.15: 2007-10-18
- Eliminate a per-request time() syscall (Rasmus)
- Added rfc1867 prefix, name, and freq ini options (Shire)
- Allow deletion of individual user cache entries via apc.php (Sara)
- Fix overzealous cleanup during RSHUTDOWN (Gopal)
- Fix memory alignment and locking issues (Gopal) 
- Make apc_compile insert/replace entries (Shire)
- Make mixed inheritance recompile & cache afresh  (Gopal)
- Make nostat mode search include_path for canonicalization (Gopal)
- ZTS & other compile fixes (Gopal, Edin, Shire)
  
3.0.14: 2007-03-21
- Build fix (Shire)
- Don't hook the upload hook if APC is disabled (Rasmus)
- Local shadow cache support (Gopal)
- Avoid uneccessary loops over op_arrays for "known" auto-globals (Gopal)
- Fix apc_add() to overwrite timed out user entries (Rasmus)
- Fix double inclusion of files with conditional classes in php4 (Gopal)
- Allocator fixes to reduce fragmentation (Gopal)

3.0.13: 2007-02-24
- File upload progress (Rasmus)
- Pthread mutex and spin locks (Shire)
- Recursive zval support for apc_fetch/_store (Shire, Gopal)
- apc.stat_ctime flag for ctime checks (Rasmus)
- Multiple key fetches with apc_fetch (Shire)
- Canary checks for shm memory deallocation (Gopal)
- Add hooks for external optimizer (Shire)
- Obsolete and remove apc optimizer (Gopal)
- APC info changes - cache insert rate, hit and miss rates (Shire)
- Fix apc_load_constants (Gopal)
- Rewrite dump opcode code to use vld (Gopal)
- Use apc_[ewn]print functions for error reporting (Shire) 
- Auto global fixes and refactoring (Gopal, Shire)